--- a/sign_up.css
+++ b/sign_up.css
@@ -1,11 +1,25 @@
 * {
     padding: 0;
     margin: 0;
-    background-color: black;
+    background-color: #121212;
     color: aliceblue;
     font-family: CircularSpTitle, CircularSpTitle-Tall, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva,;
     box-sizing: border-box;
 }
+#su2{
+    display: None;
+}
+#bar{
+    background-color: grey;
+    width: 200px;
+    height: 2px;
+}
+#inabar{
+    background-color: #1ED760;
+    width: 0%;
+    height: 2px;
+}
+
 .lato-thin {
     font-family: "Lato", sans-serif;
     font-weight: 100;
