--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     margin: 0;
 }
 
+
 body {
     background-color: #121212;
     font-family: 'Montserrat', sans-serif;
@@ -255,4 +256,8 @@ body {
     border: 0px;
     border-radius: 40px;
     cursor: pointer;
+}
+
+.su1,.su2{
+    display: None;
 }
